Fix tinymce toolbar scrolling out of view with large rich text tiles.   TinyMCE toolbar will now being sticky as the user scrolls down.

--- a/src/plone/app/mosaic/browser/static/css/mosaic.toolbar.less
+++ b/src/plone/app/mosaic/browser/static/css/mosaic.toolbar.less
@@ -192,6 +192,17 @@
   clear:both;
 }
 
+/* tinymce scrolled out of view handling */
+.mosaic-panel{
+  .mosaic-rich-text-toolbar.sticky{
+    z-index: 10000;
+    position: fixed;
+  }
+  .mosaic-rich-text-toolbar.right{
+    right: 0;
+  }
+}
+
 // /* Experimental button menu */
 //.mosaic-dropdown-buttons {
 //
